--- a/screens/about/styles.css
+++ b/screens/about/styles.css
@@ -16,6 +16,11 @@
 body {
     background-color: #A1CCA5;
     position: relative;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
 }
 
 .svg {
@@ -66,9 +71,18 @@ body {
 
 .title {
     font-family: 'DreamAvenue';
-    font-size: 50px;
-    color: #F2F2F2;
+    font-size: 70px;
+    color: #000;
     text-align: center;
-    margin-top: 60px;
-    text-shadow: 5px 5px 0px #415D43;
+    margin-top: 70px;
+}
+
+.text {
+    width: 60%;
+    font-family: 'Quicksand';
+    font-size: 20px;
+    color: #000;
+    text-align: center;
+    margin-top: 25px;
+    font-weight: bold;
 }
