--- a/screens/menu/styles.css
+++ b/screens/menu/styles.css
@@ -16,6 +16,11 @@
 body {
     background-color: #A1CCA5;
     position: relative;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
 }
 
 .svg {
@@ -71,4 +76,54 @@ body {
     text-align: center;
     margin-top: 60px;
     text-shadow: 5px 5px 0px #415D43;
+}
+
+.content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 30px;
+}
+
+.item {
+    width: 40%;
+    height: 250px;
+    background-color: #F2F2F2;
+    margin-top: 20px;
+    border-radius: 10px;
+    display: flex;
+    box-shadow: 5px 5px 0px #415D43;
+}
+
+.item img {
+    width: 35%;
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+}
+
+.item-title {
+    font-family: 'DreamAvenue';
+    font-size: 30px;
+    color: #415D43;
+    margin: 0 15px;
+}
+
+.item-text {
+    font-family: 'Quicksand';
+    font-size: 15px;
+    color: #415D43;
+    margin: 0 15px;
+}
+
+a {
+    text-decoration: none;
+    color: #415D43;
+    font-family: 'DreamAvenue';
+    font-size: 20px;
+    margin: 0 15px;
+    font-weight: bold;
+    cursor: pointer;
 }
